--- a/devicesettings/res/values-hu/strings.xml
+++ b/devicesettings/res/values-hu/strings.xml
@@ -13,6 +13,7 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+  <string name="screen_gestures_panel_title">Mozdulatok</string>
   <string name="ambient_display_title">Környezeti kijelző</string>
   <string name="ambient_display_enable_title">Környezeti kijelző</string>
   <string name="ambient_display_enable_summary">Képernyő ébresztése értesítések fogadásakor</string>
@@ -20,6 +21,7 @@
   <string name="hand_wave_gesture_summary">Értesítések pulzálása lebegő simításnál</string>
   <string name="pocket_gesture_title">Zseb</string>
   <string name="pocket_gesture_summary">Értesítések pulzálása zsebből való kivétel után</string>
+  <string name="proximity_wake_title">Közelség ébresztés</string>
   <string name="proximity_wake_enable_title">Közelség ébresztés</string>
   <string name="proximity_wake_enable_summary">Készülék ébresztése lebegő simításra</string>
 </resources>
