--- a/devicesettings/res/values-pl/strings.xml
+++ b/devicesettings/res/values-pl/strings.xml
@@ -13,6 +13,7 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+  <string name="screen_gestures_panel_title">Gesty</string>
   <string name="ambient_display_title">Aktywny wyświetlacz</string>
   <string name="ambient_display_enable_title">Aktywny wyświetlacz</string>
   <string name="ambient_display_enable_summary">Wybudź ekran, po otrzymaniu powiadomienia</string>
@@ -20,6 +21,7 @@
   <string name="hand_wave_gesture_summary">Pulsujące powiadomienia po machnięciu ręką</string>
   <string name="pocket_gesture_title">Kieszeń</string>
   <string name="pocket_gesture_summary">Pulsujące powiadomienia po wyjęciu z kieszeni</string>
+  <string name="proximity_wake_title">Wybudzenie czujnikiem zbliżeniowym</string>
   <string name="proximity_wake_enable_title">Wybudzenie czujnikiem zbliżeniowym</string>
   <string name="proximity_wake_enable_summary">Wybudź urządzenie machnięciem ręką</string>
 </resources>
