--- a/devicesettings/res/values-zh-rCN/strings.xml
+++ b/devicesettings/res/values-zh-rCN/strings.xml
@@ -13,6 +13,7 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+  <string name="screen_gestures_panel_title">手势</string>
   <string name="ambient_display_title">环境显示</string>
   <string name="ambient_display_enable_title">环境显示</string>
   <string name="ambient_display_enable_summary">当接收到通知时唤醒屏幕</string>
@@ -20,6 +21,7 @@
   <string name="hand_wave_gesture_summary">挥手时闪烁通知呼吸灯</string>
   <string name="pocket_gesture_title">口袋</string>
   <string name="pocket_gesture_summary">从口袋中拿出时闪烁通知呼吸灯</string>
+  <string name="proximity_wake_title">距离传感器唤醒</string>
   <string name="proximity_wake_enable_title">距离传感器唤醒</string>
   <string name="proximity_wake_enable_summary">挥手时唤醒设备</string>
 </resources>
