--- a/devicesettings/res/values-af/strings.xml
+++ b/devicesettings/res/values-af/strings.xml
@@ -13,6 +13,7 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+  <string name="screen_gestures_panel_title">Gebare</string>
   <string name="ambient_display_title">Omgewings skerm</string>
   <string name="ambient_display_enable_title">Omgewings skerm</string>
   <string name="ambient_display_enable_summary">Skerm sal wakker word wanneer jy kennisgewings ontvang</string>
@@ -20,6 +21,7 @@
   <string name="hand_wave_gesture_summary">Pols kennisgewings op die handgebaar</string>
   <string name="pocket_gesture_title">Sak</string>
   <string name="pocket_gesture_summary">Pols kennisgewings wanneer jy toestel uit jou sak haal</string>
+  <string name="proximity_wake_title">Nabyheid wakker word</string>
   <string name="proximity_wake_enable_title">Nabyheid wakker word</string>
   <string name="proximity_wake_enable_summary">Maak toestel wakker met waai van hand</string>
 </resources>
