--- a/devicesettings/res/values-ca/strings.xml
+++ b/devicesettings/res/values-ca/strings.xml
@@ -13,6 +13,7 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+  <string name="screen_gestures_panel_title">Gestos</string>
   <string name="ambient_display_title">Pantalla ambient</string>
   <string name="ambient_display_enable_title">Pantalla ambient</string>
   <string name="ambient_display_enable_summary">Encen la pantalla quan rebis notificacions</string>
@@ -20,6 +21,7 @@
   <string name="hand_wave_gesture_summary">Mostra notificacions quan s\'agiti amb la ma</string>
   <string name="pocket_gesture_title">Butxaca</string>
   <string name="pocket_gesture_summary">Mostra notificacions quan te\'l treguis de la butxaca</string>
+  <string name="proximity_wake_title">Desperta en apropar-se</string>
   <string name="proximity_wake_enable_title">Desperta en apropar-se</string>
   <string name="proximity_wake_enable_summary">Desperta el dispositiu en agitar</string>
 </resources>
