--- a/devicesettings/res/values-cs/strings.xml
+++ b/devicesettings/res/values-cs/strings.xml
@@ -13,6 +13,7 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+  <string name="screen_gestures_panel_title">Gesta</string>
   <string name="ambient_display_title">Ambientní zobrazení</string>
   <string name="ambient_display_enable_title">Ambientní zobrazení</string>
   <string name="ambient_display_enable_summary">Probudit obrazovku při upozornění</string>
@@ -20,6 +21,7 @@
   <string name="hand_wave_gesture_summary">Upozornit pulsováním při zamáváním rukou</string>
   <string name="pocket_gesture_title">Kapsa</string>
   <string name="pocket_gesture_summary">Upozornit pulsováním při vyjmutí z kapsy</string>
+  <string name="proximity_wake_title">Probudit přiblížením</string>
   <string name="proximity_wake_enable_title">Probudit přiblížením</string>
   <string name="proximity_wake_enable_summary">Probudit zařízení pomocí zamávání rukou</string>
 </resources>
