--- a/devicesettings/res/values-da/strings.xml
+++ b/devicesettings/res/values-da/strings.xml
@@ -13,6 +13,7 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+  <string name="screen_gestures_panel_title">Bevægelser</string>
   <string name="ambient_display_title">Inaktivitetsvisning</string>
   <string name="ambient_display_enable_title">Inaktivitetsvisning</string>
   <string name="ambient_display_enable_summary">Tænder skærmen, når du modtager notifikationer</string>
@@ -20,6 +21,7 @@
   <string name="hand_wave_gesture_summary">Vibrér, hvis der er notifikationer, når du vinker over skærmen</string>
   <string name="pocket_gesture_title">Lomme</string>
   <string name="pocket_gesture_summary">Vibrér, hvis der er notifikationer, når telefonen tages op ad lommen</string>
+  <string name="proximity_wake_title">Berøringsfri vækning</string>
   <string name="proximity_wake_enable_title">Berøringsfri vækning</string>
   <string name="proximity_wake_enable_summary">Vækker enheden ved at vinke</string>
 </resources>
