--- a/devicesettings/res/values-de/strings.xml
+++ b/devicesettings/res/values-de/strings.xml
@@ -13,6 +13,7 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+  <string name="screen_gestures_panel_title">Gesten</string>
   <string name="ambient_display_title">Inaktivitätsdisplay</string>
   <string name="ambient_display_enable_title">Inaktivitätsdisplay</string>
   <string name="ambient_display_enable_summary">Bildschirm wecken, wenn Sie Benachrichtigungen erhalten</string>
@@ -22,6 +23,7 @@
   <string name="pick_up_gesture_summary">Benachrichtigungen beim aufheben pulsieren</string>
   <string name="pocket_gesture_title">Tasche</string>
   <string name="pocket_gesture_summary">Benachrichtigungen werden eingeblendet wenn das Gerät aus der Tasche geholt wird</string>
+  <string name="proximity_wake_title">Aufwecken bei Annäherung</string>
   <string name="proximity_wake_enable_title">Bei Annäherung aufwecken</string>
   <string name="proximity_wake_enable_summary">Gerät durch Winken aufwecken</string>
 </resources>
