--- a/devicesettings/res/values-eo/strings.xml
+++ b/devicesettings/res/values-eo/strings.xml
@@ -13,6 +13,7 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+  <string name="screen_gestures_panel_title">Gestoj</string>
   <string name="ambient_display_title">Ĉirkaŭaĵa afiŝado</string>
   <string name="ambient_display_enable_title">Ĉirkaŭaĵa afiŝado</string>
   <string name="ambient_display_enable_summary">Vekigi ekranon, kiam vi ricevas atentigojn</string>
@@ -20,6 +21,7 @@
   <string name="hand_wave_gesture_summary">Sendi atentigojn mansvingante</string>
   <string name="pocket_gesture_title">Poŝo</string>
   <string name="pocket_gesture_summary">Sendi atentigojn elpoŝigante</string>
+  <string name="proximity_wake_title">Proksima veko</string>
   <string name="proximity_wake_enable_title">Proksima veko</string>
   <string name="proximity_wake_enable_summary">Veki aparaton per mana movo</string>
 </resources>
