--- a/devicesettings/res/values-es/strings.xml
+++ b/devicesettings/res/values-es/strings.xml
@@ -13,6 +13,7 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+  <string name="screen_gestures_panel_title">Gestos</string>
   <string name="ambient_display_title">Pantalla ambiental</string>
   <string name="ambient_display_enable_title">Pantalla ambiental</string>
   <string name="ambient_display_enable_summary">Activar la pantalla cuando se reciben notificaciones</string>
@@ -20,6 +21,7 @@
   <string name="hand_wave_gesture_summary">Mostrar notificaciones cuando se pase la mano por el dispositivo</string>
   <string name="pocket_gesture_title">Bolsillo</string>
   <string name="pocket_gesture_summary">Mostrar notificaciones cuando se saque del bolsillo</string>
+  <string name="proximity_wake_title">Despertar por proximidad</string>
   <string name="proximity_wake_enable_title">Despertar por proximidad</string>
   <string name="proximity_wake_enable_summary">Despertar el dispositivo al agitar</string>
 </resources>
