--- a/devicesettings/res/values-eu-rES/strings.xml
+++ b/devicesettings/res/values-eu-rES/strings.xml
@@ -13,6 +13,7 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+  <string name="screen_gestures_panel_title">Keinuak</string>
   <string name="ambient_display_title">Ambient display</string>
   <string name="ambient_display_enable_title">Ambient display</string>
   <string name="ambient_display_enable_summary">Esnatu pantaila jakinarazpenak jasotzean</string>
@@ -20,6 +21,7 @@
   <string name="hand_wave_gesture_summary">Jakinarazpen argia eskuarekin agurtzean</string>
   <string name="pocket_gesture_title">Poltsikoratu</string>
   <string name="pocket_gesture_summary">Jakinarazpen argia poltsikotik ateratzean</string>
+  <string name="proximity_wake_title">Hurbiltasun bidezko esnatzea</string>
   <string name="proximity_wake_enable_title">Hurbiltasun bidezko esnatzea</string>
   <string name="proximity_wake_enable_summary">Esnatu gailua eskuarekin agurtzean</string>
 </resources>
