--- a/devicesettings/res/values-fa/strings.xml
+++ b/devicesettings/res/values-fa/strings.xml
@@ -13,6 +13,7 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+  <string name="screen_gestures_panel_title">حرکات</string>
   <string name="ambient_display_title">نمایش محیط</string>
   <string name="ambient_display_enable_title">نمایش محیط</string>
   <string name="ambient_display_enable_summary">روشن شدن صفحه هنگام دریافت اعلان</string>
@@ -20,6 +21,7 @@
   <string name="hand_wave_gesture_summary">چشمک زدن اعلان‌ها هنگام حرکت دست</string>
   <string name="pocket_gesture_title">جیب</string>
   <string name="pocket_gesture_summary">چشمک زدن اعلان‌ها هنگام بیرون آوردن از جیب</string>
+  <string name="proximity_wake_title">بیدارباش مجاورت</string>
   <string name="proximity_wake_enable_title">بیدارباش مجاورت</string>
   <string name="proximity_wake_enable_summary">بیدارباش دستگاه در لرزش دست</string>
 </resources>
