--- a/devicesettings/res/values-fr/strings.xml
+++ b/devicesettings/res/values-fr/strings.xml
@@ -13,6 +13,7 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+  <string name="screen_gestures_panel_title">Gestes</string>
   <string name="ambient_display_title">Affichage ambiant</string>
   <string name="ambient_display_enable_title">Affichage ambiant</string>
   <string name="ambient_display_enable_summary">Activer l\'écran quand vous recevez des notifications</string>
@@ -22,6 +23,7 @@
   <string name="pick_up_gesture_summary">Activer les notification en prenant l\'appareil en main</string>
   <string name="pocket_gesture_title">Poche</string>
   <string name="pocket_gesture_summary">Activer les notification en sortant l\'appareil de la poche</string>
+  <string name="proximity_wake_title">Activation de proximité</string>
   <string name="proximity_wake_enable_title">Activation de proximité</string>
   <string name="proximity_wake_enable_summary">Activer l\'appareil d\'un geste de la main</string>
 </resources>
