--- a/devicesettings/res/values-in/strings.xml
+++ b/devicesettings/res/values-in/strings.xml
@@ -13,6 +13,7 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+  <string name="screen_gestures_panel_title">Gerakan</string>
   <string name="ambient_display_title">Layar Ambient</string>
   <string name="ambient_display_enable_title">Layar Ambient</string>
   <string name="ambient_display_enable_summary">Bangunkan layar saat Anda menerima Pemberitahuan</string>
@@ -20,6 +21,7 @@
   <string name="hand_wave_gesture_summary">Tampilkan pemberitahuan saat guncangan tangan</string>
   <string name="pocket_gesture_title">Kantung</string>
   <string name="pocket_gesture_summary">Tunjukkan pemberitahuan saat keluar dari kantung</string>
+  <string name="proximity_wake_title">Bangunkan melalui Proximitas</string>
   <string name="proximity_wake_enable_title">Bagunkan melalui Proximitas</string>
   <string name="proximity_wake_enable_summary">Nyalakan perangkat dengan guncang tangan</string>
 </resources>
