--- a/devicesettings/res/values-lt/strings.xml
+++ b/devicesettings/res/values-lt/strings.xml
@@ -13,6 +13,7 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+  <string name="screen_gestures_panel_title">Gestai</string>
   <string name="ambient_display_title">Ambient display</string>
   <string name="ambient_display_enable_title">Ambient display</string>
   <string name="ambient_display_enable_summary">Pažadinti ekraną, kai gaunami pranešimai</string>
@@ -20,6 +21,7 @@
   <string name="hand_wave_gesture_summary">Pulsuoti pranešimus rankos mostu</string>
   <string name="pocket_gesture_title">Kišenė</string>
   <string name="pocket_gesture_summary">Pulsuoti pranešimus pašalinant iš kišenės</string>
+  <string name="proximity_wake_title">Artumo pažadinimas</string>
   <string name="proximity_wake_enable_title">Artumo pažadinimas</string>
   <string name="proximity_wake_enable_summary">Pažadinti įrenginį rankos mostu</string>
 </resources>
