--- a/devicesettings/res/values-nl/strings.xml
+++ b/devicesettings/res/values-nl/strings.xml
@@ -13,6 +13,7 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+  <string name="screen_gestures_panel_title">Gebaren</string>
   <string name="ambient_display_title">Omgevingsdisplay</string>
   <string name="ambient_display_enable_title">Omgevingsdisplay</string>
   <string name="ambient_display_enable_summary">Scherm aan bij het ontvangen van meldingen</string>
@@ -20,6 +21,7 @@
   <string name="hand_wave_gesture_summary">Meldingen laten knipperen bij handgebaar</string>
   <string name="pocket_gesture_title">Broekzak</string>
   <string name="pocket_gesture_summary">Meldingen laten knipperen bij verwijderen uit broekzak</string>
+  <string name="proximity_wake_title">Ontwaken bij dichtbij</string>
   <string name="proximity_wake_enable_title">Ontwaken bij dichtbij</string>
   <string name="proximity_wake_enable_summary">Apparaat ontwaken bij handgebaar</string>
 </resources>
