--- a/devicesettings/res/values-pt-rBR/strings.xml
+++ b/devicesettings/res/values-pt-rBR/strings.xml
@@ -13,6 +13,7 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+  <string name="screen_gestures_panel_title">Gestos</string>
   <string name="ambient_display_title">Tela ambiente</string>
   <string name="ambient_display_enable_title">Tela ambiente</string>
   <string name="ambient_display_enable_summary">Ligar a tela quando receber notificações</string>
@@ -20,6 +21,7 @@
   <string name="hand_wave_gesture_summary">Pulsar notificações agitando a mão</string>
   <string name="pocket_gesture_title">Bolso</string>
   <string name="pocket_gesture_summary">Pulsar notificações após remover do bolso</string>
+  <string name="proximity_wake_title">Acordar aproximando</string>
   <string name="proximity_wake_enable_title">Acordar aproximando</string>
   <string name="proximity_wake_enable_summary">Acordar dispositivo quando chacoalhar a mão</string>
 </resources>
