--- a/devicesettings/res/values-pt-rPT/strings.xml
+++ b/devicesettings/res/values-pt-rPT/strings.xml
@@ -13,6 +13,7 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+  <string name="screen_gestures_panel_title">Gestos</string>
   <string name="ambient_display_title">Visualização de ambiente</string>
   <string name="ambient_display_enable_title">Visualização de ambiente</string>
   <string name="ambient_display_enable_summary">Ligar o ecrã quando receber notificações</string>
@@ -20,6 +21,7 @@
   <string name="hand_wave_gesture_summary">Notificações Led ao passar a mão</string>
   <string name="pocket_gesture_title">Bolso</string>
   <string name="pocket_gesture_summary">Notificações Led ao retirar do bolso</string>
+  <string name="proximity_wake_title">Sensor de proximidade</string>
   <string name="proximity_wake_enable_title">Sensor de proximidade</string>
   <string name="proximity_wake_enable_summary">Ligar o dispositivo ao passar a mão pelo sensor de proximidade</string>
 </resources>
