--- a/devicesettings/res/values-ru/strings.xml
+++ b/devicesettings/res/values-ru/strings.xml
@@ -13,6 +13,7 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+  <string name="screen_gestures_panel_title">Жесты</string>
   <string name="ambient_display_title">Индикация событий</string>
   <string name="ambient_display_enable_title">Индикация событий</string>
   <string name="ambient_display_enable_summary">Включать экран при получении уведомлений</string>
@@ -20,6 +21,7 @@
   <string name="hand_wave_gesture_summary">Проведите ладонью над экраном для просмотра уведомлений</string>
   <string name="pocket_gesture_title">Карман</string>
   <string name="pocket_gesture_summary">Отображать уведомления при извлечении устройства из кармана</string>
+  <string name="proximity_wake_title">Включение по датчикам</string>
   <string name="proximity_wake_enable_title">Включение по датчикам</string>
   <string name="proximity_wake_enable_summary">Проведите ладонью над экраном, чтобы вывести устройство из режима сна</string>
 </resources>
