--- a/devicesettings/res/values-sr/strings.xml
+++ b/devicesettings/res/values-sr/strings.xml
@@ -13,6 +13,7 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+  <string name="screen_gestures_panel_title">Гестови</string>
   <string name="ambient_display_title">Амбијент приказ</string>
   <string name="ambient_display_enable_title">Амбијент приказ</string>
   <string name="ambient_display_enable_summary">Пробуди екран кад добијеш обавештење</string>
@@ -20,6 +21,7 @@
   <string name="hand_wave_gesture_summary">Пулсно обавештење при покрету руком</string>
   <string name="pocket_gesture_title">Џеп</string>
   <string name="pocket_gesture_summary">Пулсно обавештење при уклањању из џепа</string>
+  <string name="proximity_wake_title">Буђење близином</string>
   <string name="proximity_wake_enable_title">Буђење близином</string>
   <string name="proximity_wake_enable_summary">Пробуди уређај покретом руке</string>
 </resources>
