--- a/devicesettings/res/values-th/strings.xml
+++ b/devicesettings/res/values-th/strings.xml
@@ -13,6 +13,7 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+  <string name="screen_gestures_panel_title">ท่าทาง</string>
   <string name="ambient_display_title">หน้าจอแวดล้อม</string>
   <string name="ambient_display_enable_title">หน้าจอแวดล้อม</string>
   <string name="ambient_display_enable_summary">เปิดหน้าจอเมื่อมีการแจ้งเตือน</string>
